--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "connect-timeout": "^1.7.0",
     "cookie-parser": "^1.3.5",
     "express": "4.12.3",
+    "express-session": "^1.15.4",
     "leanengine": "^2.0.0",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4"
   },
