--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "fcc-cdg-ows",
-  "version": "0.4.0",
-  "private": true,
-  "description": "The offical Web site of FreeCodeCamp Chengdu Group",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "body-parser": "1.12.3",
-    "connect-timeout": "^1.7.0",
-    "cookie-parser": "^1.3.5",
-    "express": "4.12.3",
-    "express-session": "^1.15.4",
-    "leanengine": "^2.0.0",
-    "passport": "^0.3.2",
-    "passport-github2": "^0.1.10",
-    "request": "^2.81.0",
-    "request-promise-native": "^1.0.4"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  },
-  "engines": {
-    "node": "^6.5.0"
-  }
+    "name": "@fcc-cdc/ows-be",
+    "version": "1.0.0",
+    "private": true,
+    "description": "The offical Web site of FreeCodeCamp Chengdu Group",
+    "main": "server.js",
+    "engines": {
+        "node": "^8.0.0"
+    },
+    "scripts": {
+        "format": "prettier --write \"{,!(node_modules|.git)/**/}*.{html,md,css,less,js,json,yml,yaml}\"",
+        "start": "node source/",
+        "dev": "npm run format  &&  nodemon source/",
+        "test": "npm run format"
+    },
+    "dependencies": {
+        "@fcc-cdc/it-events": "^0.4.0",
+        "core-js": "^3.0.1",
+        "koa": "^2.7.0",
+        "koa-bodyparser": "^4.2.1",
+        "koa-csrf": "^3.0.7",
+        "koa-mount": "^4.0.0",
+        "leancloud-storage": "^3.13.0",
+        "leanengine": "^3.3.3",
+        "node-fetch": "^2.3.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.18.11",
+        "prettier": "^1.17.0"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "singleQuote": true
+    }
 }
