--- a/package.json
+++ b/package.json
@@ -9,27 +9,52 @@
     },
     "scripts": {
         "format": "prettier --write \"{,!(node_modules|.git)/**/}*.{html,md,css,less,js,json,yml,yaml}\"",
-        "start": "node source/",
-        "dev": "npm run format  &&  nodemon source/",
-        "test": "npm run format"
+        "lint": "eslint source/ --fix",
+        "pack": "babel source/ -d dist/ -s",
+        "build": "npm run format  &&  npm run lint  &&  npm run pack",
+        "dev": "npm run build  &&  nodemon --inspect dist/",
+        "test": "npm run build",
+        "start": "node dist/"
     },
     "dependencies": {
-        "@fcc-cdc/it-events": "^0.4.0",
+        "@fcc-cdc/it-events": "^0.5.0",
+        "@koa/cors": "^3.0.0",
         "core-js": "^3.0.1",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
         "koa-csrf": "^3.0.7",
         "koa-mount": "^4.0.0",
+        "koa-route": "^3.2.0",
         "leancloud-storage": "^3.13.0",
         "leanengine": "^3.3.3",
         "node-fetch": "^2.3.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.4.3",
+        "@babel/core": "^7.4.3",
+        "@babel/plugin-transform-runtime": "^7.4.3",
+        "@babel/preset-env": "^7.4.3",
+        "eslint": "^5.16.0",
         "nodemon": "^1.18.11",
         "prettier": "^1.17.0"
     },
     "prettier": {
         "tabWidth": 4,
         "singleQuote": true
+    },
+    "babel": {
+        "presets": [
+            [
+                "@babel/preset-env",
+                {
+                    "targets": {
+                        "node": "8.0.0"
+                    }
+                }
+            ]
+        ],
+        "plugins": [
+            "@babel/plugin-transform-runtime"
+        ]
     }
 }
