--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         }
     },
     "dependencies": {
+        "@babel/polyfill": "^7.4.3",
+        "@babel/runtime": "^7.4.3",
         "@fcc-cdc/it-events": "^0.5.0",
         "@koa/cors": "^3.0.0",
         "core-js": "^3.0.1",
@@ -33,7 +35,8 @@
         "koa-route": "^3.2.0",
         "leancloud-storage": "^3.13.0",
         "leanengine": "^3.3.3",
-        "node-fetch": "^2.3.0"
+        "node-fetch": "^2.3.0",
+        "node-schedule": "^1.3.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.4.3",
