--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "bugs": {
         "url": "https://github.com/FreeCodeCamp-Chengdu/OWS_BE/issues"
     },
+    "engines": {
+        "node": "^8.0.0"
+    },
     "dependencies": {
         "@koa/multer": "^2.0.0",
         "class-transformer": "^0.2.3",
@@ -19,6 +22,8 @@
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
         "koa-router": "^7.4.0",
+        "leancloud-storage": "^3.15.0",
+        "leanengine": "^3.4.0",
         "multer": "^1.4.2",
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.8.0"
