--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ cache:
 install:
     - npm install
     - npm run build
+    - echo source/ >> .gitignore
+    - echo \!dist/ >> .gitignore
 deploy:
     provider: pages
     on:
