--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "kcors": "^2.2.2",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
+        "koa-logger": "^3.2.1",
         "koa-router": "^7.4.0",
         "leancloud-storage": "^3.15.0",
         "leanengine": "^3.4.0",
@@ -31,6 +32,7 @@
     "devDependencies": {
         "@types/koa": "^2.0.52",
         "@types/koa-bodyparser": "^4.3.0",
+        "@types/koa-logger": "^3.1.1",
         "@types/koa-router": "^7.0.42",
         "husky": "^3.0.9",
         "lint-staged": "^9.4.2",
