--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache:
 
 install:
     - npm install
+script:
     - npm run build
     - echo source/ >> .gitignore
     - echo \!dist/ >> .gitignore
