--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "sourceMap": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "outDir": "dist/"
+        "outDir": "dist/",
+        "lib": ["es2015", "es2019.object"]
     },
     "include": ["source/**/*"]
 }
